# estateflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
deploy/frappe_docker/: README.md  apps.json  build-image.sh  custom.env.example  verify-deployment.sh
docs/: BUILD_STATUS.md  CLIENT_DEMO_AND_UAT.md  RELEASE_NOTES_0.2.0.md
estateflow/: hooks.py  install.py  utils.py
estateflow/api/: __init__.py  availability.py  billing.py  billing_tracking.py  dashboard.py  guide.py  notifications.py  operations.py  setup.py  uat.py
estateflow/config/: docs.py
estateflow/estateflow/doctype/agreement_milestone/: agreement_milestone.json  agreement_milestone.py
estateflow/estateflow/doctype/contract_billing_event/: contract_billing_event.json  contract_billing_event.py
estateflow/estateflow/doctype/estateflow_notification_log/: estateflow_notification_log.json  estateflow_notification_log.py
estateflow/estateflow/doctype/estateflow_settings/: estateflow_settings.js  estateflow_settings.json  estateflow_settings.py
estateflow/estateflow/doctype/estateflow_uat_result/: estateflow_uat_result.json  estateflow_uat_result.py
estateflow/estateflow/doctype/estateflow_uat_run/: estateflow_uat_run.js  estateflow_uat_run.json  estateflow_uat_run.py
estateflow/fixtures/: role.json
estateflow/public/files/: EstateFlow_UAT_Testing_Template.xlsx
estateflow/public/js/: estateflow.js
estateflow/tests/: test_static_schema.py
estateflow/www/: property-listing.html  property-listing.py
estateflow/www/properties/: index.html  index.py
(+73 files in other folders)
