[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estateflow"
version = "0.1.0"
description = "Universal real estate, housing, hospitality and property operations for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "EstateFlow contributors"}]
dependencies = []
classifiers = [
  "Framework :: Frappe",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["estateflow*"]
